--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -570,3 +570,6 @@ commands:
   Warhound:
     description: Selects the warhound kit
     usage: /warhound
+  Warlock:
+    description: Selects the warlock kit
+    usage: /warlock
