--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -123,6 +123,18 @@ commands:
     permission: castlesiege.esquire
     permission-message: Only donators are permitted to use this command!
 
+  # Duels
+  Duel:
+    description: Challenge a specified player to a duel
+    usage: /duel <player>
+    aliases: duel
+    permission: castlesiege.noble
+    permission-message: Only donators -> noble or above are permitted to use this command!
+  AcceptDuel:
+    description: Accept a duel from someone
+    usage: /AcceptDuel <player>
+    aliases: Acceptd
+
   # Gameplay
   Switch:
     description: Switches teams.
