Curse perms go to Chatmod+

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -309,7 +309,7 @@ commands:
   Curse:
     description: Manages the active curses
     usage: /curse [curse]
-    permission: castlesiege.developer
+    permission: castlesiege.chatmod+
     permission-message: You are not permitted to use this command!
   Fly:
     description: Toggle flight
