--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,10 @@
             <id>upstream</id>
             <url>https://ci.nametagedit.com/plugin/repository/everything/</url>
         </repository>
+        <repository>
+            <id>codemc-releases</id>
+            <url>https://repo.codemc.io/repository/maven-releases/</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -75,12 +79,6 @@
             <artifactId>holograms-api</artifactId>
             <version>0f5b027</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>com.github.decentsoftware-eu</groupId>-->
-<!--            <artifactId>decentholograms</artifactId>-->
-<!--            <version>VERSION</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>com.comphenix.protocol</groupId>
             <artifactId>ProtocolLib</artifactId>
@@ -89,12 +87,12 @@
         <dependency>
             <groupId>com.sk89q.worldedit</groupId>
             <artifactId>worldedit-core</artifactId>
-            <version>7.3.0-SNAPSHOT</version>
+            <version>7.2.21-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.sk89q.worldedit</groupId>
             <artifactId>worldedit-bukkit</artifactId>
-            <version>7.3.0-SNAPSHOT</version>
+            <version>7.2.21-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>io.papermc.paper</groupId>
@@ -134,6 +132,24 @@
             <artifactId>gson</artifactId>
             <version>2.9.0</version>
         </dependency>
+        <!-- Scoreboard stuff -->
+        <dependency>
+            <groupId>com.github.megavexnetwork.scoreboard-library</groupId>
+            <artifactId>scoreboard-library-api</artifactId>
+            <version>2.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.megavexnetwork.scoreboard-library</groupId>
+            <artifactId>scoreboard-library-implementation</artifactId>
+            <version>2.0.2</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.megavexnetwork.scoreboard-library</groupId>
+            <artifactId>scoreboard-library-modern</artifactId>
+            <version>2.0.2</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -146,17 +162,26 @@
                     <relocations>
                         <relocation>
                             <pattern>dev.dejvokep.boostedyaml</pattern>
-                            <shadedPattern>com.github.Huntif.CastleSiege</shadedPattern>
+                            <shadedPattern>com.github.Huntif.CastleSiege.yaml</shadedPattern>
                         </relocation>
                         <relocation>
                             <pattern>commons-io.commons-io</pattern>
-                            <shadedPattern>com.github.Huntif.CastleSiege</shadedPattern>
+                            <shadedPattern>com.github.Huntif.CastleSiege.commons-io</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>net.megavex.scoreboardlibrary</pattern>
+                            <shadedPattern>com.github.Huntif.CastleSiege.libs.scoreboardlibrary</shadedPattern>
                         </relocation>
                     </relocations>
                     <artifactSet>
                         <includes>
                             <include>dev.dejvokep:boosted-yaml-spigot</include>
                             <include>commons-io:commons-io</include>
+                            <include>com.github.megavexnetwork.scoreboard-library:scoreboard-library-api</include>
+                            <include>com.github.megavexnetwork.scoreboard-library:scoreboard-library-implementation</include>
+                            <include>com.github.megavexnetwork.scoreboard-library:scoreboard-library-modern</include>
+                            <include>com.github.megavexnetwork.scoreboard-library:scoreboard-library-commons</include>
+                            <include>com.github.megavexnetwork.scoreboard-library:scoreboard-library-packet-adapter-base</include>
                         </includes>
                     </artifactSet>
                 </configuration>
