--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -435,17 +435,21 @@ commands:
   # Donations
   Unlockkit:
     description: Unlocks a kit for a player.
-    usage: /Unlockkit <Player Name> <add/remove> <Kit Name> <Time> <IsDonated:true/false>
+    usage: /unlockkit <Player Name> <add/remove> <Kit Name> <Time> <IsDonated:true/false>
     permission: castlesiege.developer
-    permission-message: You should donate or pay coins instead!
+    permission-message: Try /buykit instead
   Webshop:
-    description: Sends the link of the webshop to the commandsender.
+    description: Displays the link to support the server.
     usage: /Webshop
     aliases:
       - donate
+      - kofi
+      - ko-fi
+      - support
+      - shop
   Coinshop:
     description: Open the coinshop for the player.
-    usage: /Coinshop
+    usage: /coinshop
   buykit:
     description: Buy a kit with coins
     usage: /buykit <kit> [player]
