--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.github.AdminHuntifi</groupId>
+            <artifactId>conwymc-global</artifactId>
+            <version>0.0.14-fix</version>
+        </dependency>
+        <dependency>
             <groupId>io.lumine</groupId>
             <artifactId>Mythic-Dist</artifactId>
             <version>5.3.5</version>
