--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,7 @@
     </dependencies>
 
     <build>
+        <finalName>CastleSiege</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
