--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,13 @@
             <id>codemc-releases</id>
             <url>https://repo.codemc.io/repository/maven-releases/</url>
         </repository>
+        <repository>
+            <id>github-global</id>
+            <url>https://maven.pkg.github.com/AdminHuntifi/ConwyMC-global</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
     </repositories>
 
     <dependencies>
