--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -29,6 +29,7 @@ jobs:
     - name: Create custom settings.xml
       uses: whelk-io/maven-settings-xml-action@v22
       with:
+        output_file: $GITHUB_WORKSPACE/settings.xml
         repositories: >
           [
             {
