--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -24,7 +24,7 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-        settings-path: ${{ github.workspace }} # location for the settings.xml file
+        settings-path: $GITHUB_WORKSPACE/settings.xml # location for the settings.xml file
 
     - name: Create custom settings.xml
       uses: whelk-io/maven-settings-xml-action@v22
