--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,10 @@
             <id>codemc-releases</id>
             <url>https://repo.codemc.io/repository/maven-releases/</url>
         </repository>
+        <repository>
+            <id>github</id>
+            <url>https://maven.pkg.github.com/AdminHuntifi/ConwyMC-global</url>
+        </repository>
     </repositories>
 
     <dependencies>
