--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -110,16 +110,16 @@ commands:
     permission-message: Only donators are permitted to use this command!
 
   # Duels
-  Duel:
-    description: Challenge a specified player to a duel
-    usage: /duel <player>
-    aliases: duel
-    permission: castlesiege.noble
-    permission-message: Only donators, noble or above can use this command!
-  DuelAccept:
-    description: Accept a duel from someone
-    usage: /duelaccept <player>
-    aliases: acceptduel
+#  Duel:
+#    description: Challenge a specified player to a duel
+#    usage: /duel <player>
+#    aliases: duel
+#    permission: castlesiege.noble
+#    permission-message: Only donators, noble or above can use this command!
+#  DuelAccept:
+#    description: Accept a duel from someone
+#    usage: /duelaccept <player>
+#    aliases: acceptduel
 
   # Gameplay
   Switch:
@@ -262,13 +262,13 @@ commands:
     usage: /settimer <mins> [seconds]
     permission: castlesiege.moderator
     permission-message: You are not permitted to use this command!
-  ToggleFree:
-    description: Disables/Enables free kits
-    usage: /togglefree [true/false]
-    permission: castlesiege.moderator
-    permission-message: You are not permitted to use this command!
-    aliases:
-    - togglenolimits
+#  ToggleFree:
+#    description: Disables/Enables free kits
+#    usage: /togglefree [true/false]
+#    permission: castlesiege.moderator
+#    permission-message: You are not permitted to use this command!
+#    aliases:
+#    - togglenolimits
   Spectate:
     description: Makes you, or another player, a spectator.
     usage: /spectate [player]
@@ -289,10 +289,6 @@ commands:
     usage: /start
     permission: castlesiege.chatmod+
     permission-message: You are not permitted to use this command!
-  SetTag:
-    description: Set a nametag prefix
-    usage: /settag <tag>
-    permission: castlesiege.developer
   ToggleForcedRandom:
     description: Disables/Enables forced randomDeath setting
     usage: /toggleforcedrandom [true/false]
@@ -302,17 +298,17 @@ commands:
       - togglerandom
 
   # Donations
-  Unlockkit:
-    description: Unlocks a kit for a player.
-    usage: /unlockkit <Player Name> <add/remove> <Kit Name> <Time> <IsDonated:true/false>
-    permission: castlesiege.developer
-    permission-message: Try /buykit instead
-  Coinshop:
-    description: Open the coinshop for the player.
-    usage: /coinshop
-  buykit:
-    description: Buy a kit with coins
-    usage: /buykit <kit> [player]
+#  Unlockkit:
+#    description: Unlocks a kit for a player.
+#    usage: /unlockkit <Player Name> <add/remove> <Kit Name> <Time> <IsDonated:true/false>
+#    permission: castlesiege.developer
+#    permission-message: Try /buykit instead
+#  Coinshop:
+#    description: Open the coinshop for the player.
+#    usage: /coinshop
+#  buykit:
+#    description: Buy a kit with coins
+#    usage: /buykit <kit> [player]
 
   # Kits
   Random:
@@ -321,165 +317,168 @@ commands:
   Kit:
     description: Open the GUI for selecting kits
     usage: /kit <category>
-  Alchemist:
-    description: Selects the alchemist kit
-    usage: /alchemist
-  Archer:
-    description: Selects the archer kit
-    usage: /archer
-  Armorer:
-    description: Selects the armorer kit
-    usage: /armorer
-  Berserker:
-    description: Selects the berserker kit
-    usage: /berserker
-  BattleMedic:
-    description: Selects the battle medic kit
-    usage: /battlemedic
-  Barbarian:
-    description: Selects the barbarian kit
-    usage: /barbarian
-  Bannerman:
-    description: Selects the bannerman kit
-    usage: /bannerman
-  Cavalry:
-    description: Selects the cavalry kit
-    usage: /cavalry
-  CamelRider:
-    description: Selects the camel rider kit
-    usage: /camelrider
-  Chef:
-    description: Selects the chef kit
-    usage: /chef
-  Constructor:
-    description: Selects the constructor kit
-    usage: /constructor
-  RoyalCryptsFallen:
-    description: Selects the Fallen kit for Royal Crypts as Fallen
-    usage: /royalcryptsfallen
-  Crossbowman:
-    description: Selects the crossbowman kit
-    usage: /crossbowman
-  ConwyLongbowman:
-    description: Selects the Conwy longbowman kit for the Rebellion
-    usage: /ConwyLongbowman
-  ConwyRoyalKnight:
-    description: Selects the Conwy royal knight kit for the English
-    usage: /conwyroyalknight
-  ConwyArbalester:
-    description: Selects the Conwy arbalester kit for the English
-    usage: /conwyarbalester
-  Engineer:
-    description: Selects the engineer kit
-    usage: /engineer
-  ThunderstoneElytrier:
-    description: Selects the Elytrier kit for Thunderstone Guard
-    usage: /thunderstoneelytrier
-  Executioner:
-    description: Selects the executioner kit
-    usage: /executioner
-  FireArcher:
-    description: Selects the firearcher kit
-    usage: /firearcher
-  FirelandsAbyssal:
-    description: Selects the Abyssal kit from firelands for the Burning Legion
-    usage: /firelandsabyssal
-  FirelandsHellsteed:
-    description: Selects the Hellsteed kit from firelands for the Burning Legion
-    usage: /firelandshellsteed
-  Halberdier:
-    description: Selects the halberdier kit
-    usage: /halberdier
-  Hypaspist:
-    description: Selects the hypaspist kit
-    usage: /hypaspist
-  HelmsDeepUrukBerserker:
-    description: Selects the Berserker kit on Helm's Deep
-    usage: /helmsdeepberserker
-  HelmsdeepLancer:
-    description: Selects the Lancer kit on Helm's Deep
-    usage: /helmsdeeplancer
-  HommetLongbowman:
-    description: Selects the Longbowman kit on Hommet
-    usage: /HommetLongbowman
-  HommetAxeman:
-    description: Selects the Axeman kit on Hommet
-    usage: /HommetAxeman
-  HelmsdeepRangedCavalry:
-    description: Selects the Ranged Cavalry kit on Helm's Deep
-    usage: /helmsdeeprangedcavalry
-  Ladderman:
-    description: Selects the ladderman kit
-    usage: /ladderman
-  Maceman:
-    description: Selects the maceman kit
-    usage: /maceman
-  Medic:
-    description: Selects the medic kit
-    usage: /medic
-  Moriabonecrusher:
-    description: Selects the Bonecrusher kit for Moria
-    usage: /moriabonecrusher
-  MoriaWindlancer:
-    description: Selects the Windlancer kit for Moria
-    usage: /moriawindlancer
-  Moriaguardian:
-    description: Selects the Guardian kit for Moria
-    usage: /moriaguardian
-  Moriacavetroll:
-    description: Selects the Cave Troll kit for Moria
-    usage: /moriacavetroll
-  Moriaaxethrower:
-    description: Selects the Axe Thrower kit for Moria
-    usage: /moriaaxethrower
-  Moriaorc:
-    description: Selects the Moria Orc kit for Moria
-    usage: /moriaorc
-  Priest:
-    description: Selects the Priest kit
-    usage: /priest
-  Paladin:
-    description: Selects the Paladin kit
-    usage: /paladin
-  Ranger:
-    description: Selects the ranger kit
-    usage: /ranger
-  Rogue:
-    description: Selects the rogue kit
-    usage: /rogue
-  Scout:
-    description: Selects the scout kit
-    usage: /scout
-  Shieldman:
-    description: Selects the shieldman kit
-    usage: /shieldman
-  Skirmisher:
-    description: Selects the skirmisher kit
-    usage: /skirmisher
-  Spearman:
-    description: Selects the spearman kit
-    usage: /spearman
-  Spearknight:
-    description: Selects the spearknight kit
-    usage: /spearknight
-  Swordsman:
-    description: Selects the swordsman kit
-    usage: /swordsman
-  Sorcerer:
-    description: Selects the sorcerer kit
-    usage: /sorcerer
-  Vanguard:
-    description: Selects the vanguard kit
-    usage: /vanguard
-  Viking:
-    description: Selects the viking kit
-    usage: /viking
-  Warbear:
-    description: Selects the warbear kit
-    usage: /warbear
-  Warhound:
-    description: Selects the warhound kit
-    usage: /warhound
-  Warlock:
-    description: Selects the warlock kit
-    usage: /warlock
+#  Alchemist:
+#    description: Selects the alchemist kit
+#    usage: /alchemist
+#  Archer:
+#    description: Selects the archer kit
+#    usage: /archer
+#  Armorer:
+#    description: Selects the armorer kit
+#    usage: /armorer
+#  Berserker:
+#    description: Selects the berserker kit
+#    usage: /berserker
+#  BattleMedic:
+#    description: Selects the battle medic kit
+#    usage: /battlemedic
+#  Barbarian:
+#    description: Selects the barbarian kit
+#    usage: /barbarian
+#  Bannerman:
+#    description: Selects the bannerman kit
+#    usage: /bannerman
+#  Cavalry:
+#    description: Selects the cavalry kit
+#    usage: /cavalry
+#  CamelRider:
+#    description: Selects the camel rider kit
+#    usage: /camelrider
+#  Chef:
+#    description: Selects the chef kit
+#    usage: /chef
+#  Constructor:
+#    description: Selects the constructor kit
+#    usage: /constructor
+#  RoyalCryptsFallen:
+#    description: Selects the Fallen kit for Royal Crypts as Fallen
+#    usage: /royalcryptsfallen
+#  Crossbowman:
+#    description: Selects the crossbowman kit
+#    usage: /crossbowman
+#  ConwyLongbowman:
+#    description: Selects the Conwy longbowman kit for the Rebellion
+#    usage: /ConwyLongbowman
+#  ConwyRoyalKnight:
+#    description: Selects the Conwy royal knight kit for the English
+#    usage: /conwyroyalknight
+#  ConwyArbalester:
+#    description: Selects the Conwy arbalester kit for the English
+#    usage: /conwyarbalester
+#  Engineer:
+#    description: Selects the engineer kit
+#    usage: /engineer
+#  ThunderstoneElytrier:
+#    description: Selects the Elytrier kit for Thunderstone Guard
+#    usage: /thunderstoneelytrier
+#  Executioner:
+#    description: Selects the executioner kit
+#    usage: /executioner
+#  FireArcher:
+#    description: Selects the firearcher kit
+#    usage: /firearcher
+#  FirelandsAbyssal:
+#    description: Selects the Abyssal kit from firelands for the Burning Legion
+#    usage: /firelandsabyssal
+#  FirelandsHellsteed:
+#    description: Selects the Hellsteed kit from firelands for the Burning Legion
+#    usage: /firelandshellsteed
+#  Halberdier:
+#    description: Selects the halberdier kit
+#    usage: /halberdier
+#  Hypaspist:
+#    description: Selects the hypaspist kit
+#    usage: /hypaspist
+#  HelmsDeepUrukBerserker:
+#    description: Selects the Berserker kit on Helm's Deep
+#    usage: /helmsdeepberserker
+#  HelmsdeepLancer:
+#    description: Selects the Lancer kit on Helm's Deep
+#    usage: /helmsdeeplancer
+#  HommetLongbowman:
+#    description: Selects the Longbowman kit on Hommet
+#    usage: /HommetLongbowman
+#  HommetAxeman:
+#    description: Selects the Axeman kit on Hommet
+#    usage: /HommetAxeman
+#  HelmsdeepRangedCavalry:
+#    description: Selects the Ranged Cavalry kit on Helm's Deep
+#    usage: /helmsdeeprangedcavalry
+#  Ladderman:
+#    description: Selects the ladderman kit
+#    usage: /ladderman
+#  Maceman:
+#    description: Selects the maceman kit
+#    usage: /maceman
+#  Medic:
+#    description: Selects the medic kit
+#    usage: /medic
+#  Moriabonecrusher:
+#    description: Selects the Bonecrusher kit for Moria
+#    usage: /moriabonecrusher
+#  MoriaWindlancer:
+#    description: Selects the Windlancer kit for Moria
+#    usage: /moriawindlancer
+#  Moriaguardian:
+#    description: Selects the Guardian kit for Moria
+#    usage: /moriaguardian
+#  Moriacavetroll:
+#    description: Selects the Cave Troll kit for Moria
+#    usage: /moriacavetroll
+#  Moriaaxethrower:
+#    description: Selects the Axe Thrower kit for Moria
+#    usage: /moriaaxethrower
+#  Moriaorc:
+#    description: Selects the Moria Orc kit for Moria
+#    usage: /moriaorc
+#  Priest:
+#    description: Selects the Priest kit
+#    usage: /priest
+#  Paladin:
+#    description: Selects the Paladin kit
+#    usage: /paladin
+#  Ranger:
+#    description: Selects the ranger kit
+#    usage: /ranger
+#  Rogue:
+#    description: Selects the rogue kit
+#    usage: /rogue
+#  Scout:
+#    description: Selects the scout kit
+#    usage: /scout
+#  Shieldman:
+#    description: Selects the shieldman kit
+#    usage: /shieldman
+#  Skirmisher:
+#    description: Selects the skirmisher kit
+#    usage: /skirmisher
+#  Spearman:
+#    description: Selects the spearman kit
+#    usage: /spearman
+#  Spearknight:
+#    description: Selects the spearknight kit
+#    usage: /spearknight
+#  Swordsman:
+#    description: Selects the swordsman kit
+#    usage: /swordsman
+#  Sorcerer:
+#    description: Selects the sorcerer kit
+#    usage: /sorcerer
+#  Vanguard:
+#    description: Selects the vanguard kit
+#    usage: /vanguard
+#  Viking:
+#    description: Selects the viking kit
+#    usage: /viking
+#  Warbear:
+#    description: Selects the warbear kit
+#    usage: /warbear
+#  Warhound:
+#    description: Selects the warhound kit
+#    usage: /warhound
+#  Warlock:
+#    description: Selects the warlock kit
+#    usage: /warlock
+  Fisherman:
+    description: Selects the fisherman kit
+    usage: /fisherman
