--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -375,6 +375,9 @@ commands:
   Bonecrusher:
     description: Selects the Bonecrusher kit
     usage: /Bonecrusher
+  Buccaneer:
+    description: Selects the buccaneer kit
+    usage: /buccaneer
   CamelRider:
     description: Selects the camel rider kit
     usage: /camelrider
@@ -390,6 +393,9 @@ commands:
   Fallen:
     description: Selects the Fallen kit
     usage: /fallen
+  Gunner:
+    description: Selects the gunner kit
+    usage: /gunner
   Guardian:
     description: Selects the Guardian kit
     usage: /guardian
@@ -414,6 +420,9 @@ commands:
   UrukBerserker:
     description: Selects the Uruk Berserker kit
     usage: /urukberserker
+  Pirate:
+    description: Selects the pirate kit
+    usage: /pirate
   Windlancer:
     description: Selects the Windlancer kit
     usage: /windlancer
